{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 59,
  "lineage": "513a14d2-3ae8-9f45-3903-c6e99d793fbb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "rag_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0249172bffd34a061",
            "arn": "arn:aws:ec2:eu-west-3:346299179356:elastic-ip/eipalloc-0249172bffd34a061",
            "association_id": "eipassoc-0b71090b5aa41d34b",
            "domain": "vpc",
            "id": "eipalloc-0249172bffd34a061",
            "instance": "i-04c6642ae1a19d46f",
            "network_border_group": "eu-west-3",
            "network_interface": "eni-03fed656ddbc1c595",
            "private_dns": "ip-10-0-1-108.eu-west-3.compute.internal",
            "private_ip": "10.0.1.108",
            "public_dns": "ec2-35-181-96-98.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.181.96.98",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "rag-llamaindex-eip"
            },
            "tags_all": {
              "Name": "rag-llamaindex-eip"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.rag_server",
            "aws_key_pair.deployer",
            "aws_security_group.rag_api",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu_arm64"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "rag_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d866938d550e52c4",
            "arn": "arn:aws:ec2:eu-west-3:346299179356:instance/i-04c6642ae1a19d46f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04c6642ae1a19d46f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "key_name": "rag-llamaindex-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03fed656ddbc1c595",
            "private_dns": "ip-10-0-1-108.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.108",
            "public_dns": "ec2-35-180-124-53.eu-west-3.compute.amazonaws.com",
            "public_ip": "35.180.124.53",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-3:346299179356:key/4a4bcef3-cf3a-45c1-94d6-051431c382e3",
                "throughput": 125,
                "volume_id": "vol-0c371801a85232f10",
                "volume_size": 45,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f489e519f6d1da5",
            "tags": {
              "Environment": "prod",
              "Name": "rag-llamaindex-server",
              "Project": "rag-llamaindex"
            },
            "tags_all": {
              "Environment": "prod",
              "Name": "rag-llamaindex-server",
              "Project": "rag-llamaindex"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00ed09b335d1a725c"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.deployer",
            "aws_security_group.rag_api",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.ubuntu_arm64"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:346299179356:internet-gateway/igw-039ab65d3d03cabce",
            "id": "igw-039ab65d3d03cabce",
            "owner_id": "346299179356",
            "tags": {
              "Name": "rag-llamaindex-igw"
            },
            "tags_all": {
              "Name": "rag-llamaindex-igw"
            },
            "vpc_id": "vpc-0cf407542964fb0ed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:346299179356:route-table/rtb-01fbeb9705cdd89f2",
            "id": "rtb-01fbeb9705cdd89f2",
            "owner_id": "346299179356",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-039ab65d3d03cabce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rag-llamaindex-rt-public"
            },
            "tags_all": {
              "Name": "rag-llamaindex-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf407542964fb0ed"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fbed2a3b3342dcb",
            "route_table_id": "rtb-01fbeb9705cdd89f2",
            "subnet_id": "subnet-04f489e519f6d1da5"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rag_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:346299179356:security-group/sg-00ed09b335d1a725c",
            "description": "Security group for RAG LlamaIndex API",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ed09b335d1a725c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ollama (optional direct access)",
                "from_port": 11434,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 11434
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "RAG API",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "rag-llamaindex-sg",
            "name_prefix": "",
            "owner_id": "346299179356",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rag-llamaindex-sg"
            },
            "tags_all": {
              "Name": "rag-llamaindex-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cf407542964fb0ed"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:346299179356:subnet/subnet-04f489e519f6d1da5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3a",
            "availability_zone_id": "euw3-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f489e519f6d1da5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "346299179356",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rag-llamaindex-subnet-public"
            },
            "tags_all": {
              "Name": "rag-llamaindex-subnet-public"
            },
            "vpc_id": "vpc-0cf407542964fb0ed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:346299179356:vpc/vpc-0cf407542964fb0ed",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_route_table_id": "rtb-01653688067dc8be1",
            "default_security_group_id": "sg-0360021dfdb4bd358",
            "dhcp_options_id": "dopt-0dde565319af5d325",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cf407542964fb0ed",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01653688067dc8be1",
            "owner_id": "346299179356",
            "tags": {
              "Name": "rag-llamaindex-vpc"
            },
            "tags_all": {
              "Name": "rag-llamaindex-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}